fixed issue with textarea and input on mobile

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -192,7 +192,8 @@ section {
   letter-spacing: 1.4px;
   min-height: 30px;
   padding: 10px;
-  
+  max-width: 90vw;
+
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.22);
   border-radius: 16px;
@@ -202,6 +203,7 @@ section {
   border: 1px solid rgba(255, 255, 255, 0.81);
 }
 .contact_content form textarea {
+  max-width: 90vw;
   font-weight: 700;
   letter-spacing: 1.4px;
   min-height: 30px;
